# sdwork-demo-1

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GUIDE_idf_converter.md  PLAN_optimizer_comparison.md  README.md  REVIEW_20260528.md  TASKS_idf_converter.md  agent_framework.md  app.py  ga_optimizer_app.py  main.py  manual_test_app.py  parametric_20260528_app.py  parametric_l_app.py  partition_20260528_app.py  pyproject.toml  sim_viewer_app.py
configs/: ga_llm_hybrid_arch.yaml  ga_llm_hybrid_smoke.yaml  ga_llm_hybrid_smoke_llm.yaml  ga_llm_hybrid_template.yaml
ga_llm_hybrid/: README.md  __init__.py  config.py  main.py  orchestrator.py  ui_config.py
ga_llm_hybrid/core/: __init__.py  ga_engine.py  individual.py  objective.py  parameter_space.py
ga_llm_hybrid/energyplus/: __init__.py  backend.py  idf_generator.py  result_parser.py  simulation_runner.py  template_backend.py
ga_llm_hybrid/io/: __init__.py  data_recorder.py  report_generator.py
ga_llm_hybrid/llm/: __init__.py  analyzer.py  prompts.py  validator.py
ga_llm_hybrid/sensitivity/: __init__.py  morris.py
output/: gradient_l_office.json
plugins/: __init__.py
scripts/: ep_sim_utils.py  facade_params.py  ga_20260528.py  ga_core.py  ga_core_20260528.py  ga_defaults_20260528.py  generate_20260528.py  generate_bridge_cluster.py  generate_corner_path_l.py  generate_l_gradient.py  generate_supported_corner_path_l.py  idf_converter.py  idf_defaults.py  llm_optimizer.py  setup_plugin.sh  vis_utils.py  zone_partition.py  zone_utils.py
src/: config.py
src/agent/: chat_agent.py  graph.py  llm.py  state.py
src/agent/nodes/: __init__.py  energyplus.py  export.py  intake.py  zone.py
src/agent/tools/: __init__.py  zone_tools.py
src/models/: __init__.py  zone.py
tests/: test_ga_llm_hybrid_ga.py  test_ga_llm_hybrid_idf_generator.py  test_ga_llm_hybrid_llm_analyzer.py  test_ga_llm_hybrid_result_parser.py  test_ga_llm_hybrid_validator.py  test_idf_converter_geometry.py  test_idf_converter_partitioned.py
