[project]
name = "arch-model-agent"
version = "0.1.0"
description = "LLM Agent for 3D architectural modeling - generates JSON with zone geometry for Rhino/Grasshopper"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
