[project]
name = "arch-model-agent"
version = "0.1.0"
description = "LLM Agent for 3D architectural modeling - generates JSON with zone geometry for Rhino/Grasshopper"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "pydantic>=2.0.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "streamlit>=1.30.0",
    # UI (optional — required only when running app.py)
    # streamlit>=1.40.0
    # plotly>=5.0.0
    "httpx[socks]>=0.28.1",
    "eppy>=0.5.69",
    "idfpy>=26.1.0.post5",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src", "ga_llm_hybrid"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
